--- a/extra/event-fa/default.po
+++ b/extra/event-fa/default.po
@@ -329,18 +329,18 @@ msgstr "تصویر اصلی"
 #: src/Form/EventForm.php:214 template/front/event-detail.phtml:165
 #: template/front/event-detail.phtml:279 template/front/order-detail.phtml:43
 msgid "Address"
-msgstr "آدرس"
+msgstr "نشانی"
 
 #: src/Form/EventForm.php:225 template/front/event-detail.phtml:151
 #: template/front/event-detail.phtml:265 template/front/order-detail.phtml:27
 msgid "Organizer name"
-msgstr "برگزارکننده‌ی تور"
+msgstr "نام برگزارکننده‌ی تور"
 
 #: src/Form/EventForm.php:236 template/front/event-detail.phtml:156
 #: template/front/event-detail.phtml:271 template/front/event-detail.phtml:272
 #: template/front/order-detail.phtml:33 template/front/order-detail.phtml:35
 msgid "Organizer Website"
-msgstr "وب سایت برگزارکننده"
+msgstr "وب سایت برگزارکننده‌ی تور"
 
 #: src/Form/EventForm.php:247
 msgid "Offer url"
